--- a/index.html
+++ b/index.html
@@ -71,49 +71,49 @@
   <div class="shop-section">
     <div class="box">
      <div class="box-content"> <h2>Clothing</h2>
-      <div class="box-img" style="background-image: url('Images/box1_image.jpg');"></div>
+      <div class="box-img" style="background-image: url('/box1_image.jpg');"></div>
       <p>See more</p>
     </div>
     </div>
     <div class="box"> 
       <div class="box-content"> <h2>Health & Personal Care</h2>
-      <div class="box-img" style="background-image: url('Images/box2_image.jpg');"></div>
+      <div class="box-img" style="background-image: url('/box2_image.jpg');"></div>
       <p>See more</p>
     </div>
   </div>
     <div class="box">
       <div class="box-content"> <h2>Furniture</h2>
-        <div class="box-img" style="background-image: url('Images/box3_image.jpg');"></div>
+        <div class="box-img" style="background-image: url('/box3_image.jpg');"></div>
         <p>See more</p>
       </div>
     </div>
     <div class="box">
       <div class="box-content"> <h2>Smartphones</h2>
-        <div class="box-img" style="background-image: url('Images/box4_image.jpg');"></div>
+        <div class="box-img" style="background-image: url('/box4_image.jpg');"></div>
         <p>See more</p>
       </div>
     </div>
     <div class="box">
       <div class="box-content"> <h2>Beauty Products</h2>
-       <div class="box-img" style="background-image: url('Images/box5_image.jpg');"></div>
+       <div class="box-img" style="background-image: url('/box5_image.jpg');"></div>
        <p>See more</p>
      </div>
      </div>
      <div class="box"> 
        <div class="box-content"> <h2>Pet Food</h2>
-       <div class="box-img" style="background-image: url('Images/box6_image.jpg');"></div>
+       <div class="box-img" style="background-image: url('/box6_image.jpg');"></div>
        <p>See more</p>
      </div>   
    </div>
      <div class="box">
        <div class="box-content"> <h2>Art & Crafts</h2>
-         <div class="box-img" style="background-image: url('Images/box7_image.jpg');"></div>
+         <div class="box-img" style="background-image: url('/box7_image.jpg');"></div>
          <p>See more</p>
        </div>
      </div>
      <div class="box">
        <div class="box-content"> <h2>Fashion</h2>
-         <div class="box-img" style="background-image: url('Images/box8_image.jpg');"></div>
+         <div class="box-img" style="background-image: url('/box8_image.jpg');"></div>
          <p>See more</p>
        </div>
      </div>
