--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <div class="shop-section">
     <div class="box">
      <div class="box-content"> <h2>Clothing</h2>
-      <div class="box-img" style="background-image: url('/box1_image.jpg');"></div>
+      <div class="box-img" style="background-image: url('/box1_image.png');"></div>
       <p>See more</p>
     </div>
     </div>
